--- a/IntelPlayer/IntelPlayer.csproj
+++ b/IntelPlayer/IntelPlayer.csproj
@@ -72,9 +72,16 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="playlist.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Playlist.cs" />
+    <Compile Include="playlist.xaml.cs">
+      <DependentUpon>playlist.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
